--- a/maincss.css
+++ b/maincss.css
@@ -1,93 +1,95 @@
 body {
-    background-color: rgb(46,49,54);
+   background-color: rgb(46,49,54);
 }
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: rgb(66,69,73);
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+   background-color: rgb(66,69,73);
+   overflow: hidden;
+ }
+ 
+ /* Style the links inside the navigation bar */
+ .topnav a {
+   float: left;
+   color: #f2f2f2;
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;
+   font-size: 17px;
+ }
+ 
+ /* Change the color of links on hover */
+ .topnav a:hover {
+   background-color: #ddd;
+   color: black;
+ }
+ 
+ /* Add a color to the active/current link */
+ .topnav a.active {
+   background-color: #04AA6D;
+   color: white;
+ }
 
-  .avatar {
-    text-align: center;
-    padding-top: 100px;
+ .avatar {
+   text-align: center;
+   padding-top: 100px;
+ }
+
+ .NameUnderBot {
+     padding-top: 50px;
+     text-align: center;
+ }
+
+ NameOfBot {
+     font-size: x-large;
+     font-weight: bold;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
+
+ .InviteButton {
+   background-color: #4CAF50; /* Green */
+   border: none;
+   color: white;
+   padding: 20px 75px;
+   text-align: center;
+   text-decoration: none;
+
+   font-size: 16px;
+ }
+
+ .InviteButtonDiv {
+   padding-top: 25px ;
+   text-align: center;
+ }
+
+  body {
+     padding: 1%;
+     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
-
-  .NameUnderBot {
-      padding-top: 50px;
-      text-align: center;
+  * {
+     box-sizing: border-box;
   }
-
-  NameOfBot {
-      font-size: x-large;
-      font-weight: bold;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  .left, .right, .center {
+     width: 25%;
+     color: white;
+     padding: 10px;
+     height: 500px;
+     text-align: center;
   }
-
-  .InviteButton {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 20px 75px;
-    text-align: center;
-    text-decoration: none;
-
-    font-size: 16px;
+  .left {
+     background-color: rgb(202, 202, 202);
+     float: left;
   }
-
-  .InviteButtonDiv {
-    padding-top: 25px ;
-    text-align: center;
+  .right {
+     background-color: rgb(202, 202, 202);
+     display: inline-block;
+     float: right;
   }
-
-   body {
-      padding: 1%;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-   }
-   * {
-      box-sizing: border-box;
-   }
-   .left, .right, .center {
-      width: 25%;
-      color: white;
-      padding: 10px;
-      height: 500px;
-      text-align: center;
-      background-color: rgb(202, 202, 202)
-   }
-   .left {
-      float: left;
-   }
-   .right {
-      display: inline-block;
-      float: right;
-   }
-   .center {
-      margin-left: 12%;
-      display: inline-block;
-      float: center;
-   }
-   .container:after {
-      clear: both;
-   }
+  .center {
+     background-color: rgb(202, 202, 202);
+     margin-left: 12%;
+     display: inline-block;
+     float: center;
+  }
+  .container:after {
+     clear: both;
+  }
