--- a/maincss.css
+++ b/maincss.css
@@ -40,7 +40,7 @@ body {
      text-align: center;
  }
 
- NameOfBot {
+ .NameOfBot {
      font-size: x-large;
      font-weight: bold;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -93,4 +93,9 @@ body {
   }
   .container:after {
      clear: both;
+  }
+
+  body 
+  {
+   margin: 0;
   }
