--- a/maincss.css
+++ b/maincss.css
@@ -1,11 +1,14 @@
 body {
    background-color: rgb(46,49,54);
+   margin: 0;
+   padding: 0;
 }
 /* Add a black background color to the top navigation */
 .topnav {
    background-color: rgb(66,69,73);
    overflow: hidden;
    padding: 0;
+   margin: 0;
  }
  
  /* Style the links inside the navigation bar */
@@ -95,4 +98,4 @@ body {
      clear: both;
   }
 
-  html, body { margin: 0; padding: 0 }
+  html { margin: 0; padding: 0; }
